refactor Restaurant